--- a/src/app.html
+++ b/src/app.html
@@ -4,10 +4,13 @@
 		<meta charset="utf-8" />
 		<meta name="description" content="" />
 		<link rel="icon" href="%svelte.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+		<meta name="theme-color" content="mediumslateblue" />
 		<style>
 			body {
-				margin: 1em;
+				margin: 0;
+				padding: 0;
+				background-color: rgb(var(--color-background));
 			}
 		</style>
 		%svelte.head%
