--- a/src/app.html
+++ b/src/app.html
@@ -2,14 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="description" content="" />
-		<link rel="icon" href="%svelte.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-		<meta name="theme-color" content="mediumslateblue" />
 		<style>
 			body {
 				margin: 0;
 				padding: 0;
+				overscroll-behavior: none;
 				background-color: rgb(var(--color-background));
 			}
 		</style>
